// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Row separator Batch Row default separator is working 1`] = `
"┌───────┬───────────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m                 text[0m │[37m [0m[01mvalue[0m │
├───────┼───────────────────────┼───────┤
│[37m [0m[37m    3[0m │[37m [0m[37mrow default separator[0m │[37m [0m[37m  100[0m │
│[37m [0m[37m    4[0m │[37m [0m[37mrow default separator[0m │[37m [0m[37m  300[0m │
└───────┴───────────────────────┴───────┘"
`;

exports[`Testing Row separator Batch Row separator by each row 1`] = `
"┌───────┬───────────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m                 text[0m │[37m [0m[01mvalue[0m │
├───────┼───────────────────────┼───────┤
│[37m [0m[37m    3[0m │[37m [0m[37mrow without separator[0m │[37m [0m[37m  100[0m │
│[37m [0m[37m    4[0m │[37m [0m[37m   row with separator[0m │[37m [0m[37m  300[0m │
├───────┼───────────────────────┼───────┤
│[37m [0m[37m    5[0m │[37m [0m[37mrow without separator[0m │[37m [0m[37m  100[0m │
└───────┴───────────────────────┴───────┘"
`;

exports[`Testing Row separator Batch Row separator combined with sorting 1`] = `
"┌───────┬───────────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m                 text[0m │[37m [0m[01mvalue[0m │
├───────┼───────────────────────┼───────┤
│[37m [0m[37m    1[0m │[37m [0m[37mrow inherit separator[0m │[37m [0m[37m  100[0m │
├───────┼───────────────────────┼───────┤
│[37m [0m[37m    2[0m │[37m [0m[37m   row with separator[0m │[37m [0m[37m  100[0m │
├───────┼───────────────────────┼───────┤
│[37m [0m[37m    3[0m │[37m [0m[37mrow without separator[0m │[37m [0m[37m  100[0m │
│[37m [0m[37m    4[0m │[37m [0m[37mrow without separator[0m │[37m [0m[37m  100[0m │
│[37m [0m[37m    5[0m │[37m [0m[37m   row with separator[0m │[37m [0m[37m  100[0m │
└───────┴───────────────────────┴───────┘"
`;

exports[`Testing Row separator Batch Row separator is working 1`] = `
"┌───────┬────────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m              text[0m │[37m [0m[01mvalue[0m │
├───────┼────────────────────┼───────┤
│[37m [0m[37m    3[0m │[37m [0m[37mrow with separator[0m │[37m [0m[37m  100[0m │
├───────┼────────────────────┼───────┤
│[37m [0m[37m    4[0m │[37m [0m[37mrow with separator[0m │[37m [0m[37m  300[0m │
└───────┴────────────────────┴───────┘"
`;

exports[`Testing Row separator Batch Row table separator option is working 1`] = `
"┌───────┬─────────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m               text[0m │[37m [0m[01mvalue[0m │
├───────┼─────────────────────┼───────┤
│[37m [0m[37m    3[0m │[37m [0m[37mtable row separator[0m │[37m [0m[37m  100[0m │
├───────┼─────────────────────┼───────┤
│[37m [0m[37m    4[0m │[37m [0m[37mtable row separator[0m │[37m [0m[37m  300[0m │
└───────┴─────────────────────┴───────┘"
`;

exports[`Testing Row separator Batch Row table separator override is working 1`] = `
"┌───────┬──────────────────────────────┬───────┐
│[37m [0m[01mindex[0m │[37m [0m[01m                        text[0m │[37m [0m[01mvalue[0m │
├───────┼──────────────────────────────┼───────┤
│[37m [0m[37m    3[0m │[37m [0m[37moverride table row separator[0m │[37m [0m[37m  100[0m │
│[37m [0m[37m    4[0m │[37m [0m[37moverride table row separator[0m │[37m [0m[37m  300[0m │
└───────┴──────────────────────────────┴───────┘"
`;
